# CMakeList.txt : CMake project for x69ppAsssembler, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("x69ppAsssembler")

# Add source to this project's executable.
add_executable (x69ppAsssembler "x69ppAsssembler.cpp" "x69ppAsssembler.h")

# TODO: Add tests and install targets if needed.
